Open-weather hard-coded url and appid removed; The old appid will be expired soon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strict": true
+    "strict": true,
+    "types": [
+      "./src/types"
+    ]
   },
   "types": ["styled-components-react-native"]
 }
