Sunrise and Sunset time added on screen; Added different themes by weather condition and day periods(day or night); Added paths in tsconfig and babel(to recognize in require callings); Small code structure changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,16 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@services/*": ["./src/services/*"],
+      "@stores/*": ["./src/stores/*"]
+    }
   },
   "types": [
     "./src/types",
