--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-av": "^9.1.2",
     "expo-localization": "^10.1.0",
     "expo-location": "^12.0.4",
+    "expo-screen-orientation": "~3.1.0",
     "expo-status-bar": "~1.0.4",
     "i18n-js": "^3.8.0",
     "mobx": "^6.3.2",
